# FlowAI

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh
migrations/: env.py
migrations/versions/: 890080cdc877_initial_revision.py
src/api/v1/server/: __init__.py  app.py
src/api/v1/server/routers/: _0_main_router.py  __init__.py  calls_router.py
src/core/: config.py
src/core/repository/database/: __init__.py  db_config.py  db_manager.py
src/core/repository/database/crud/: __init__.py  calls_crud.py
src/core/repository/database/models/: __init__.py  call_models.py
src/core/repository/schemas/: __init__.py
src/core/repository/schemas/api_schemas/: __init__.py  _description_app.py  api.py  db_config.py
src/core/repository/schemas/call_schemas/: __init__.py  calls.py
src/core/repository/services/celery/: __init__.py  app.py
src/core/repository/tasks/: __init__.py  recording.py
