[project]
name = "flowai-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "celery>=5.5.3",
    "fastapi>=0.117.1",
    "flower>=2.0.1",
    "greenlet>=3.2.4",
    "kombu>=5.5.4",
    "orjson>=3.11.3",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
